<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="match_parent">


    <!-- Name -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20dp"
        android:textStyle="bold"
        android:id="@+id/name"
        android:layout_marginTop="10dp"
        android:background="#ffffe7b3" />

    <!--specialization -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/specialization"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:id="@+id/textView3"
        android:layout_below="@+id/name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15dp"
        android:textStyle="bold"
        android:id="@+id/specialization"
        android:layout_toLeftOf="@+id/textView3"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <!--location -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/location"
        android:textSize="15dp"
        android:textStyle="bold"
        android:id="@+id/textView4"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_toRightOf="@+id/specialization"
        android:layout_toEndOf="@+id/specialization" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15dp"
        android:textStyle="bold"
        android:id="@+id/location"
        android:layout_toLeftOf="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView4" />

<!--address -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/address"
        android:textSize="15dp"
        android:textStyle="bold"
        android:id="@+id/textView5"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView4"
        android:layout_toRightOf="@+id/location"
        android:layout_toEndOf="@+id/location" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15dp"
        android:textStyle="bold"
        android:id="@+id/address"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView5"
        android:layout_toLeftOf="@+id/textView5"
        android:layout_toStartOf="@+id/textView5" />

    <!--phone -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/phone"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:id="@+id/textView6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/address"
        android:layout_toRightOf="@+id/address"
        android:layout_toEndOf="@+id/address" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/phone"
        android:textSize="15dp"
        android:gravity="right"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/textView6"
        android:layout_toStartOf="@+id/textView6"
        android:layout_alignTop="@+id/textView6"
        android:layout_above="@+id/textView11" />

    <!--mobile -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mobile"
        android:id="@+id/textView11"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView6"
        android:layout_alignRight="@+id/textView6"
        android:layout_alignEnd="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/mobile"
        android:textSize="15dp"
        android:gravity="right"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView11"
        android:layout_toLeftOf="@+id/textView6"
        android:layout_toStartOf="@+id/textView6" />


</RelativeLayout>