<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Name -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20dp"
        android:textStyle="bold"
        android:id="@+id/hospital_name"
        android:layout_marginTop="10dp"
        android:background="#ffffe7b3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/specialization"
        android:textStyle="bold"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:id="@+id/textView13"
        android:layout_below="@+id/hospital_name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15dp"
        android:textStyle="bold"
        android:gravity="right"
        android:layout_marginTop="10dp"
        android:id="@+id/hospital_specialization"
        android:layout_below="@+id/hospital_name"
        android:layout_alignBottom="@+id/textView13"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/textView13"
        android:layout_toStartOf="@+id/textView13" />

    <!-- location -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/location"
        android:gravity="center"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView13"
        android:layout_alignRight="@+id/textView13"
        android:layout_alignEnd="@+id/textView13"
        android:layout_toRightOf="@+id/hospital_specialization"
        android:layout_toEndOf="@+id/hospital_specialization" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15dp"
        android:textStyle="bold"
        android:gravity="right"
        android:id="@+id/hospital_location"
        android:layout_alignTop="@+id/textView8"
        android:layout_toLeftOf="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <!-- Address -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/address"
        android:gravity="center"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView8"
        android:layout_alignRight="@+id/textView8"
        android:layout_alignEnd="@+id/textView8"
        android:layout_toRightOf="@+id/hospital_location"
        android:layout_toEndOf="@+id/hospital_location" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15dp"
        android:textStyle="bold"
        android:gravity="right"
        android:id="@+id/hospital_address"
        android:layout_toLeftOf="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView9" />

    <!--phone -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/phone"
        android:gravity="center"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:id="@+id/textView10"
        android:layout_below="@+id/hospital_address"
        android:layout_alignRight="@+id/textView9"
        android:layout_alignEnd="@+id/textView9"
        android:layout_toRightOf="@+id/hospital_address"
        android:layout_toEndOf="@+id/hospital_address" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/hospital_phone"
        android:textSize="15dp"
        android:textStyle="bold"
        android:gravity="right"
        android:layout_alignTop="@+id/textView10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/textView10"
        android:layout_toStartOf="@+id/textView10" />

    <!-- Fax -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/fax"
        android:textSize="15dp"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/textView12"
        android:layout_below="@+id/hospital_phone"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/hospital_phone"
        android:layout_toEndOf="@+id/hospital_phone"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15dp"
        android:textStyle="bold"
        android:gravity="right"
        android:id="@+id/hospital_fax"
        android:layout_alignTop="@+id/textView12"
        android:layout_toLeftOf="@+id/textView12"
        android:layout_alignBottom="@+id/textView12"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>